// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs generate should accept pages it just wrote 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "CLI documentation in <sandbox>/docs is up to date (14 pages)",
  ],
}
`;

exports[`docs generate should generate a page per command group 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Generated 14 documentation pages in <sandbox>/docs",
  ],
}
`;

exports[`docs generate should reject pages that drifted 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "CLI documentation in <sandbox>/drifted is stale, regenerate it with 'xrf-cli docs generate':",
    "  outdated: README.md",
    "  missing: archive.md",
    "  missing: dialog.md",
    "  missing: docs.md",
    "  missing: externs.md",
    "  missing: gamedata.md",
    "  missing: ltx.md",
    "  missing: ogf.md",
    "  missing: omf.md",
    "  missing: particle.md",
    "  missing: spawn.md",
    "  missing: texture.md",
    "  missing: thm.md",
    "  missing: translation.md",
    "Check failed: 14 finding(s)",
  ],
  "stdout": [],
}
`;

exports[`docs generate should write the expected pages 1`] = `
[
  {
    "path": "docs/README.md",
    "sha256": "03009edbe9bacd428cf303b797bc3a78afb66aaba2783d51e683b7370c72a8a3",
    "size": 2625,
  },
  {
    "path": "docs/archive.md",
    "sha256": "b28999ed583c6be60a1b0a69ece23d40b19f6aa2dad9c4f5b9e7783ad47800d1",
    "size": 5705,
  },
  {
    "path": "docs/dialog.md",
    "sha256": "1f28999f9e61ac16ed4be80588ae92bb34d2320d4e717e0a584b451744c91b80",
    "size": 1222,
  },
  {
    "path": "docs/docs.md",
    "sha256": "51be64ce0d9550a7f85893ca1f43a2e0b132d0f016882bd4d6b63157e97a972f",
    "size": 776,
  },
  {
    "path": "docs/externs.md",
    "sha256": "1a8de4dac647a691bb72433ac3cee20d571952d30c2c4a9d8add15fea348d144",
    "size": 1092,
  },
  {
    "path": "docs/gamedata.md",
    "sha256": "9b134b26638b41a086ddad7184e7957b732bc8faf74731b5fbb3bd6405b89863",
    "size": 2173,
  },
  {
    "path": "docs/ltx.md",
    "sha256": "7ba37e08195e9b5845e56ae617085ac500958e5f2f6a06142cd524d61030836a",
    "size": 1294,
  },
  {
    "path": "docs/ogf.md",
    "sha256": "9ac0dbeafa0f19abdbf8c23b5942db5180b2b6354404aa485c07332d1bf501da",
    "size": 3076,
  },
  {
    "path": "docs/omf.md",
    "sha256": "d9b64799c4af46f51dcf0dd6f67f299d81445d6d3a6835273840fc478f1266bf",
    "size": 4067,
  },
  {
    "path": "docs/particle.md",
    "sha256": "0aa14baffedda96203f0b7ad01f88c8905b1098391f57468935dc1d3be34143b",
    "size": 4049,
  },
  {
    "path": "docs/spawn.md",
    "sha256": "6c9548ea34f324f93df078238e1174ffb9cdb2a7a87cbec0b6d4a57e6d51afc6",
    "size": 3236,
  },
  {
    "path": "docs/texture.md",
    "sha256": "92a53347550b21ff8874c985eb5e8e7092d5a543c0f583505fbac3e4d65ca8f7",
    "size": 6202,
  },
  {
    "path": "docs/thm.md",
    "sha256": "5852456eea8aba64c3ad1ec17a6493e3f70d45c96e051c273d7c082869ee9772",
    "size": 1109,
  },
  {
    "path": "docs/translation.md",
    "sha256": "08a709afec3296790034efd63af6596044eebb4777704a62fd65ca5501971b09",
    "size": 2721,
  },
  {
    "path": "drifted/README.md",
    "sha256": "35db1bffa5ee9c9e44e31d2688bf494f0087c6e21f4d2e39393914acd793cae4",
    "size": 25,
  },
]
`;
